[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/city.gd" type="Script" id=1]
[ext_resource path="res://assets/animated_city_spritesheet_corrected.png" type="Texture" id=2]
[ext_resource path="res://assets/destroyed_city_spritesheet.png" type="Texture" id=3]
[ext_resource path="res://assets/city_lights.svg" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "city_ok"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
}

[sub_resource type="Animation" id=2]
resource_name = "city_down"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 2, 3, 4 ]
}

[node name="city" type="Area2D"]
scale = Vector2( 1.5, 1.5 )
input_pickable = false
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -102, 10.5555 )
scale = Vector2( 1, 1.00581 )
polygon = PoolVector2Array( 199.604, 5.5208, 198.967, -11.9716, 192.612, -16.7382, 177.12, -17.1354, 177.518, -39.7766, 169.573, -47.3237, 162.821, -39.7766, 161.232, -24.6824, 150.507, -31.4351, 142.96, -32.2295, 141.768, -48.1181, 137.002, -54.0763, 116.744, -47.7209, 113.169, -52.4875, 87.7471, -53.2819, 80.9944, -70.7593, 68.2836, -54.4735, 64.7086, -45.7348, 48.4229, -48.1181, 35.3148, -59.6373, 32.9315, -11.1771, 3.93483, -11.1771, 4.55534, 4.94019 )

[node name="blink" type="Tween" parent="."]

[node name="health" type="Label" parent="."]
margin_left = -30.0
margin_top = 30.0
margin_right = 20.0
margin_bottom = 44.0
text = "HEALTH"
align = 1

[node name="animated_city" type="Sprite" parent="."]
position = Vector2( 0, -20 )
scale = Vector2( 0.439014, 0.37963 )
texture = ExtResource( 2 )
vframes = 6
hframes = 5
frame = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="animated_city"]
anims/city_ok = SubResource( 1 )

[node name="destroyed_city" type="Sprite" parent="."]
visible = false
position = Vector2( -0.475081, -18.6028 )
scale = Vector2( 0.436842, 0.378041 )
texture = ExtResource( 3 )
centered = false
hframes = 5
region_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="destroyed_city"]
anims/city_down = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -3.31726, -37.6239 )
texture = ExtResource( 4 )
texture_scale = 0.35
[connection signal="tween_completed" from="blink" to="." method="_on_blink_tween_completed"]
